--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,8 +10,8 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     # Admin Panel proxy
-    location /admin {
-        proxy_pass http://admin:3001;
+    location /admin/ {
+        proxy_pass http://admin:80/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -20,6 +20,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    # Redirect /admin to /admin/
+    location = /admin {
+        return 301 /admin/;
     }
 
     # Frontend routing
