--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,8 +32,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Backend API proxy
-    location /api {
+    # Backend API proxy (strip /api prefix)
+    location /api/ {
+        rewrite ^/api/(.*) /$1 break;
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
