--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -203,7 +203,9 @@ jobs:
             docker compose -f docker-compose.prod.yml exec -T backend npx prisma migrate deploy
 
             # Seed database (creates admin user if not exists)
-            docker compose -f docker-compose.prod.yml exec -T backend npx prisma db seed || echo "Seed may have already been applied"
+            echo "=== Running database seed ==="
+            docker compose -f docker-compose.prod.yml exec -T backend npx prisma db seed 2>&1 || echo "Seed may have already been applied"
+            echo "=== Seed completed ==="
 
             docker image prune -f
 
