fix(admin): add test selectors and fix e2e workflow
- Add data-testid attributes to SignInForm inputs
- Add name/id attributes to form fields
- Add <title>Joker Admin</title> to index.html
- Update auth.fixture.ts with waitForAppReady helper
- Update auth.spec.ts with data-testid selectors
- Add 'prisma db seed' step to create admin user in CI
- Add fallback password and continue-on-error for admin e2e

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -147,6 +147,8 @@ jobs:
           labels: ${{ steps.meta-admin.outputs.labels }}
           cache-from: type=gha,scope=admin
           cache-to: type=gha,mode=max,scope=admin
+          build-args: |
+            CACHE_BUST=${{ github.sha }}
 
   deploy:
     needs: [build-backend, build-frontend, build-admin]
