--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -15,6 +15,8 @@ RUN pnpm install --frozen-lockfile
 
 FROM base AS build
 WORKDIR /app
+# Cache bust arg to force rebuild when source changes
+ARG CACHE_BUST
 COPY . .
 COPY --from=dependencies /app/node_modules ./node_modules
 # Ensure nested node_modules are present if any (usually pnpm hoists to root)
