--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -15,6 +15,8 @@ RUN pnpm install --frozen-lockfile
 
 FROM base AS build
 WORKDIR /app
+# Cache bust arg to force rebuild when source changes
+ARG CACHE_BUST
 COPY . .
 COPY --from=dependencies /app/node_modules ./node_modules
 COPY --from=dependencies /app/packages/shared/node_modules ./packages/shared/node_modules
