fix(ci): start backend via package start script in e2e

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -180,8 +180,7 @@ jobs:
 
       - name: Start Backend
         run: |
-          cd apps/backend
-          node dist/main.js &
+          pnpm --filter @joker/backend start:prod &
           timeout 60 bash -c 'until curl -s http://localhost:3000/api/health > /dev/null; do sleep 1; done'
 
       - name: Start Frontend
@@ -277,8 +276,7 @@ jobs:
 
       - name: Start Backend
         run: |
-          cd apps/backend
-          node dist/main.js &
+          pnpm --filter @joker/backend start:prod &
           timeout 60 bash -c 'until curl -s http://localhost:3000/api/health > /dev/null; do sleep 1; done'
 
       - name: Start Admin
